--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,17 @@
 {
-    "version": 2,
-    "builds": [
-      {
+    "builds": [{
         "src": "portP/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-      },
-      {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build"
-        }
-      }
-    ],
+        "config": {"maxLambdaSize": "15mb", "runtime": "python3.11"}
+    }],
     "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "portP/wsgi.py"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "portP/wsgi.py"
+        }
     ]
-  }
-  
+}
+
+
+
+vercel.json
